Unterschriftenliste zum Auslegen in der Schule hinzugefügt

--- a/Brief_Lehrer/Brief_Lehrer.tex
+++ b/Brief_Lehrer/Brief_Lehrer.tex
@@ -118,7 +118,7 @@ Ich freue mich über jede Teilnahme.
 
 % Anlage(n)
 % Standardmäßig wird "Anlage(n)" eingefügt, dies kann überschrieben werden, hier mit "Anlagen"
-\encl{Datenschutzerklärung}
+\encl{Datenschutzerklärung, Unterschriftenliste für Schulen}
 
 % Verteiler
 %\cc{Bürgermeister, Vereinsvorsitzender}
