--- a/Brief_Eisenmann/brief.tex
+++ b/Brief_Eisenmann/brief.tex
@@ -96,7 +96,7 @@
 	
 \opening{Sehr geehrte Frau Dr. Eisenmann,}
 
-Mein Name ist Paul Goldschmidt und ich bin 18 Jahre alt. Ich bin stellvertretender Schülersprecher der Carl-Bosch-Schule Heidelberg sowie Mitglied des achten Jugendgemeinderates der Stadt Heidelberg. Ich schreibe diesen Brief nach zahllosen gebunden, da sie sich an die Vorgaben Ihres Ministeriums halten müssen.\\
+Mein Name ist Paul Goldschmidt und ich bin 18 Jahre alt. Ich bin stellvertretender Schülersprecher der Carl-Bosch-Schule Heidelberg sowie Mitglied des achten Jugendgemeinderates der Stadt Heidelberg. Ich schreibe diesen Brief nach zahllosen Aufforderungen an die Schulleitungen, Ihren Umgang mit Corona zu verändern, welchen jedoch in dieser Sache die Hände gebunden sind, da sie sich an die Vorgaben Ihres Ministeriums halten müssen.\\
 In diesen beispiellosen Zeiten, die uns vor enorme Herausforderungen stellen, ist es wichtiger denn je, sich klar zum Gesundheitsschutz der Bürgerinnen und Bürger, insbesondere jedoch der Risikogruppen zu bekennen. Doch was wir, die Schülerinnen und Schüler, Lehrerinnen und Lehrer des Bundeslandes Baden-Württemberg Tag für Tag erleben, ist weit von dieser fundamentalen Fürsorgepflicht für alle Bevölkerungsgruppen entfernt: Mit steigenden Infektionszahlen wird die Idee, Schulen mit vollen Klassenzimmern auf Biegen und Brechen weiter zu führen, mit jedem Tag realitätsferner und aus unserer Sicht gänzlich untragbar. \\
 Die Versuche, durch eine dauerhafte Maskenpflicht im Unterricht und auf dem Schulgelände sowie durch regelmäßiges Lüften der Übertragung des Virus Herr zu werden, sind ein Wunschdenken. Die Maskenpflicht endet im Sportunterricht, einem Ort, wo aufgrund von gesteigerter körperlicher Aktivität die Aerosolbelastung umso höher ist. Wenn die Masken getragen werden, sind Konzentrationsprobleme der Schüler*innen sehr häufig, da durch die Masken das laute Sprechen erschwert wird, Schüler*innen und Lehrer*innen nur schwer verstanden werden können. Zumal ist mit dem ständigen Tragen der Masken (bis zu zehn Stunden pro Tag) eine hohe körperliche Anstrengung verbunden, viele Schüler*innen sowie Lehrkräfte haben so am Ende des Schultages Gesundheitsbeschwerden. Und das regelmäßige Lüften wird im Winter kaum komplett durchsetzbar sein, denn ein Durchlüften im Klassenraum würde im Winter wohl arktische Temperaturen im Klassenraum mit sich bringen. Wie die Satirezeitung \glqq Der Postillon\grqq{} Mitte Oktober schon mahnte, müssen wohl bei diesen Temperaturen im Klassenzimmer Heizpilze verteilt werden\footnote{Der Postillon, 12.10.2020: \glqq \href{https://www.der-postillon.com/2020/10/heizpilze.html}{\color{blue}Heizpilze in Klassenzimmern sollen Lüften im Winter ermöglichen\grqq}}. Diese Temperaturen werden dem Immunsystem zusätzlich zusetzen, so könnte sich ein Virus wie COVID-19 umso schneller ausbreiten. \\
 
