--- a/Brief_Eisenmann/brief.tex
+++ b/Brief_Eisenmann/brief.tex
@@ -84,7 +84,7 @@
 \setkomavar{date}{\today}
 
 % Betreff
-\setkomavar{subject}{Offener Brief an Frau Dr. Susanne Eisenmann: Ein Appell von Schüler*innen und Lehrer*innen an Ihre Verantwortung und die Ihres Ministeriums}
+\setkomavar{subject}{Offener Brief an Frau Dr. Susanne Eisenmann: Ein Appell von Schüler*innen an Ihre Verantwortung und die Ihres Ministeriums}
 
 
 \begin{letter}{
@@ -98,7 +98,7 @@
 
 Mein Name ist Paul Goldschmidt und ich bin 18 Jahre alt. Ich bin stellvertretender Schülersprecher der Carl-Bosch-Schule Heidelberg sowie Mitglied des achten Jugendgemeinderates der Stadt Heidelberg. Ich schreibe diesen Brief nach zahllosen Aufforderungen an die Schulleitungen, den Umgang mit COVID-19 in der Schule zu verändern, welchen jedoch in dieser Sache die Hände gebunden sind, da sie sich an die Vorgaben Ihres Ministeriums halten müssen.\\
 In diesen beispiellosen Zeiten, die uns vor enorme Herausforderungen stellen, ist es wichtiger denn je, sich klar zum Gesundheitsschutz der Bürgerinnen und Bürger, insbesondere jedoch der Risikogruppen zu bekennen. Doch was wir, die Schülerinnen und Schüler, Lehrerinnen und Lehrer des Bundeslandes Baden-Württemberg Tag für Tag erleben, ist weit von dieser fundamentalen Fürsorgepflicht für alle Bevölkerungsgruppen entfernt: Mit steigenden Infektionszahlen wird die Idee, Schulen mit vollen Klassenzimmern auf Biegen und Brechen weiter zu führen, mit jedem Tag realitätsferner und aus unserer Sicht gänzlich untragbar. \\
-Die Versuche, durch eine dauerhafte Maskenpflicht im Unterricht und auf dem Schulgelände sowie durch regelmäßiges Lüften der Übertragung des Virus Herr zu werden, sind ein Wunschdenken. Die Maskenpflicht endet im Sportunterricht, einem Ort, wo aufgrund von gesteigerter körperlicher Aktivität die Aerosolbelastung umso höher ist. Wenn die Masken getragen werden, sind Konzentrationsprobleme der Schüler*innen sehr häufig, da durch die Masken das laute Sprechen erschwert wird, Schüler*innen und Lehrer*innen nur schwer verstanden werden können. Zumal ist mit dem ständigen Tragen der Masken (bis zu zehn Stunden pro Tag) eine hohe körperliche Anstrengung verbunden, viele Schüler*innen sowie Lehrkräfte haben so am Ende des Schultages Gesundheitsbeschwerden. Und das regelmäßige Lüften wird im Winter kaum komplett durchsetzbar sein, denn ein Durchlüften im Klassenraum würde im Winter wohl arktische Temperaturen im Klassenraum mit sich bringen. Wie die Satirezeitung \glqq Der Postillon\grqq{} Mitte Oktober schon mahnte, müssen wohl bei diesen Temperaturen im Klassenzimmer Heizpilze verteilt werden\footnote{Der Postillon, 12.10.2020: \glqq \href{https://www.der-postillon.com/2020/10/heizpilze.html}{\color{blue}Heizpilze in Klassenzimmern sollen Lüften im Winter ermöglichen\grqq}}. Diese Temperaturen werden dem Immunsystem zusätzlich zusetzen, so könnte sich ein Virus wie COVID-19 umso schneller ausbreiten. \\
+Die Versuche, durch eine dauerhafte Maskenpflicht im Unterricht und auf dem Schulgelände sowie durch regelmäßiges Lüften der Übertragung des Virus Herr zu werden, sind ein Wunschdenken. Die Maskenpflicht endet im Sportunterricht, einem Ort, wo aufgrund von gesteigerter körperlicher Aktivität die Aerosolbelastung umso höher ist. Wenn die Masken getragen werden, sind Konzentrationsprobleme der Schüler*innen sehr vermert, da durch die Masken die CO\textsubscript{2} das laute Sprechen erschwert wird, Schüler*innen und Lehrer*innen nur schwer verstanden werden können. Zumal ist mit dem ständigen Tragen der Masken (bis zu zehn Stunden pro Tag) eine hohe körperliche Anstrengung verbunden, viele Schüler*innen sowie Lehrkräfte haben so am Ende des Schultages Gesundheitsbeschwerden. Und das regelmäßige Lüften wird im Winter kaum komplett durchsetzbar sein, denn ein Durchlüften im Klassenraum würde im Winter wohl arktische Temperaturen im Klassenraum mit sich bringen. Wie die Satirezeitung \glqq Der Postillon\grqq{} Mitte Oktober schon mahnte, müssen wohl bei diesen Temperaturen im Klassenzimmer Heizpilze verteilt werden\footnote{Der Postillon, 12.10.2020: \glqq \href{https://www.der-postillon.com/2020/10/heizpilze.html}{\color{blue}Heizpilze in Klassenzimmern sollen Lüften im Winter ermöglichen\grqq}}. Diese Temperaturen werden dem Immunsystem zusätzlich zusetzen, so könnte sich ein Virus wie COVID-19 umso schneller ausbreiten. \\
 
 \textbf{Deshalb appellieren wir an Sie:} Denken Sie über dringend benötigte Alternativsysteme zum Unterricht in voller Stärke mit allen Klassen im Präsenz"-unterricht gleichzeitig nach. Vor allem in weiterführenden Schulen und ab der Mittelstufe aufwärts gibt es andere Möglichkeiten, den Unterricht mit dem nötigen Abstand zu gewährleisten, und dabei gleichzeitig für mehr Chancengleichheit zu sorgen: Ein rollierendes System oder Klassenteilung würden für größeren Abstand zwischen den Schülern sorgen, so wäre eine Ansteckungsgefahr für Schüler*innen und Lehrer*innen niedriger, Risikogruppen könnten folglich noch eher den Unterricht besuchen. \\
 Natürlich können wir verstehen, dass gerade bei jüngeren Schülern ein dauerhafter Präsenz\-unterricht für die arbeitenden Eltern sehr wichtig und wünschenswert ist. Eine Alternative zum dauerhaften Präsenz\-unterricht in den Schulen wie das eben schon erwähnte rollierende System sind deshalb auch vor allem für die Klassenstufen sieben und aufwärts in vollem Maße umzusetzen, niedrigere Klassenstufen haben aber auch ein vermindertes Infektionsrisiko\footnote{Quelle: Vorveröffentlichung der Studie \href{https://www.klinikum.uni-heidelberg.de/fileadmin/pressestelle/Kinderstudie/Prevalence_of_COVID-19_in_BaWu__.pdf}{\color{blue}\glqq Prevalence of COVID-19 in children in Baden-Württemberg\grqq{}}} und sind deshalb nicht in dem selben Maß gefährdet wie es die Mittel- und Oberstufen in den Schulen unseres (Bundes-)Landes sind.
